# Financial-risk-analysis

Project3/: .env  Dockerfile  Project3.sln  config.env  docker-compose.yml  generate_data_simple.py  nginx.conf  requirements.txt
Project3/Project3/: Project3.vcxproj  Project3.vcxproj.filters  RiskAnalysisServer.vcxproj  billion_scale_optimization.sql  client_main.cpp  test_frontend.html
Project3/Project3/client/: client.py  requirements.txt
Project3/Project3/x64/Debug/: Project3.exe.recipe  Project3.ilk  vc143.idb
Project3/Project3/x64/Debug/Project3.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Project3.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Project3/backend/: CMakeLists.txt  app.py  risk_analysis_server.cpp  risk_analysis_server_clean.cpp  risk_analysis_server_final.cpp  risk_analysis_server_fixed.cpp  risk_analysis_server_minimal.cpp  risk_analysis_server_simple.cpp  risk_analysis_server_single.cpp  risk_analysis_server_windows.cpp  simple_server.cpp
Project3/database/: init.sql
Project3/frontend/: app.js  index.html
